AKSNEW/06.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-webapp
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:
    metadata:
      labels:
        app: usermgmt-webapp
    spec:
      containers:
      - name: usermgmt-webapp
        image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-service
  labels:
    app: usermgmt-webapp
spec:
  type: LoadBalancer
  selector:
    app: usermgmt-webapp
  ports:
  - port: 80
    targetPort: 8080
